--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@ li {
 }
 
 /******************************************************
-		HEADER
+HEADER
 *******************************************************/
 
 .header {
@@ -86,7 +86,7 @@ nav .selected {
 }
 
 /**************************************************
-		Gallery 
+Gallery 
 *****************************************************/
 
 #gallery {
@@ -153,21 +153,23 @@ ABOUT
 ***********************************************/
 
 .wrapper {
-	max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+	max-width: 90%;
 	margin: 3em auto;
-	padding: 0 5%;
-	font-size: .75em;
 	color: #fff;
 }
 
-
+#about-primary img {
+  max-width: 256px;
+}
 
 .profile-photo {
-  width: 80%;
-  margin: 0 10% 1em 10%;
-  max-width: 300px;
+  max-width: 80%;
   border-radius: 100%;
 }
+
 
 #about-text {
 	display: block;
@@ -181,47 +183,35 @@ ABOUT
 }
 
 /***********************************************
-PAGE: CONTACT
+CONTACT
 ***********************************************/
 
-#contact-secondary {
-	padding: .5em .5em .5em;
-  width: 50%;
+#contact-wrapper {
+  align-items: stretch;
 }
 
-#contact-secondary h3 {
-	margin-top: .5em;
-	margin-bottom: .5em;
+#contact-wrapper h3 {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+#contact-primary p {
+  max-width: 80%;
+  padding-left: 1.3em;
 }
 
 .contact-info {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    font-size: 0.9em;
+  padding-left: 0px;
+}
+
+.contact-info li {
+  margin-bottom: 1em;
+  list-style: none;
 }
 
 .contact-info a {
-    display: block;
-    min-height: 20px;
-    background-repeat: no-repeat;
-    background-size: 20px 20px;
-    padding: 0 0 0 30px;
-    margin: 0 0 10px;
+  padding: 1.3em;
 }
-
-.contact-info li.phone a {
-    background-image: url('../img/phone.png');
-}
-
-.contact-info li.mail a {
-    background-image: url('../img/mail.png');
-}
-
-.contact-info li.twitter a {
-    background-image: url('../img/twitter.png');
-}
-
 
 /***********************************************
 FOOTER
